--- a/lawenforcement.html
+++ b/lawenforcement.html
@@ -68,7 +68,7 @@
         <div class="feature-item">
             <img src="https://img.icons8.com/doodle/256/muscle-flexing.png">
             <h3>Practical Self-Defense Techniques for Law Enforcement</h3>
-            <p>Experience BJJ techniques designed to enhance your ability to handle critical situations safely, with a focus on the needs of law enforcement professionals. Our instructors are well-versed in the unique challenges faced in the field and offer effective training to address them successfully.</p>
+            <p>Experience BJJ techniques designed to enhance your ability to handle critical situations safely, drawing on principles that can be translated effectively to various scenarios, including law enforcement situations.</p>
         </div>
         <div class="feature-item">
             <img src="https://img.icons8.com/color/256/kimono.png" alt="Self-Defense Icon">
