--- a/bully.html
+++ b/bully.html
@@ -14,6 +14,12 @@
     <a href="https://www.restigouchedojo.com" class="back-btn">Back to Main Website</a> 
   </header>
   <div class="container">
+    
+    <select id="language-selection">
+  <option value="en">English</option>
+  <option value="fr">Français</option>
+</select>
+    
     <section class="hero">
       <!-- Add a visually striking image or video related to self-defense or empowerment -->
     </section>
