--- a/bully.html
+++ b/bully.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Empowerment Against Bullying Workshop - Techniques Edition</h1>
     <a href="#" class="cta-btn">Register Now</a>
-    <a href="https://www.restigouchedojo.com" class="back-btn">Back to Main Website</a> 
+    <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
   <div class="container">
     
