--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Upcoming events</h2>
-                      <p class="people__desc"><a href="https://restigouchedojo.com/activitygroup.html">Playful (Activity group)</a>
-		      <br>Fall prevention and safe landing
-		      <br>Soft play for babies
-		      <br>Women self-defense 2.0
+                      <p class="people__desc">
+		      		Judo Fall Registration
+		      		<br>Fall prevention and safe landing
+		      		<br>Homeschool Judo/'Gym' class
+		      		<br>Women self-defense 2.0
 		      </p>
                   </div>
                   <div class="people__div people__div--name">
