--- a/fallprevention.html
+++ b/fallprevention.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fall prevention workshop</title>
+    <title>Fall prevention/control workshop</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
     <link href="alternativestyle.css" rel="stylesheet">
@@ -53,23 +53,23 @@
                 <option value="en">English</option>
                 <option value="fr">Français</option>
                 </select>
-                <h1 id="title">Fall prevention workshop</h1>
+                <h1 id="title">Fall prevention/control workshop</h1>
                 <div class="container">
                 <div class="details">
-                <p id="welcome-message">Welcome to the Fall prevention workshop at Restigouche Dojo!
+                <p id="welcome-message">Welcome to the Fall prevention and control workshop at Restigouche Dojo!
                 </p>
-                <p id="program-description">Our 6-week program is designed to help elderly adults reduce their
+                <p id="program-description">Our program is designed to help elderly adults reduce their
                     risk of falling and improve their balance and mobility, while also teaching them how to fall properly to
                     reduce the risk of injury. Our experienced instructors will guide you through 1-hour sessions, once a
                     week, providing clear instructions and a supportive community to help you achieve your goals.</p>
 
                 <p id="enroll-message">Enroll now and take the first step towards a safer and more active lifestyle!
                 </p>
-                <button id="enroll-btn"> <a href="https://square.link/u/WWQU0vII">Enroll/Inscription</a></button>
+                <button id="enroll-btn"> <a href="https://restigouchedojo.com/fallprevention.html">Enroll/Inscription</a></button>
                     
                 <button id="disclaimer-btn">Disclaimer</button>
                     <div id="disclaimer-message">
-                    <p>Please note that our 6-week program is not a guarantee of safety. While we teach proper techniques to reduce the risk of injury, accidents can still occur. Participants should stay vigilant and avoid dangerous situations, and consult with their healthcare provider before starting any new exercise program.</p>
+                    <p>Please note that our program is not a guarantee of safety. While we teach proper techniques to reduce the risk of injury, accidents can still occur. Participants should stay vigilant and avoid dangerous situations, and consult with their healthcare provider before starting any new exercise program.</p>
 
                 </div>
                 </div>
