--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Upcoming events</h2>
                       <p class="people__desc">
-		      		Judo Fall Registration
-		      		<br>Fall prevention and safe landing
+		      		<a href="https://restigouchedojo.com/payment.html" target="_blank">Judo Registration</a>
+		      		<br><a href="https://restigouchedojo.com/fallprevention.html" target="_blank">Fall prevention and safe landing</a>
 		      		<br>Homeschool Judo/'Gym' class
 		      		<br>Women self-defense 2.0
 		      </p>
