--- a/fallprevention.html
+++ b/fallprevention.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fall prevention/control workshop</title>
+    <title>Fall prevention and safe landing workshop</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
     <link href="alternativestyle.css" rel="stylesheet">
@@ -56,7 +56,7 @@
                 <h1 id="title">Fall prevention/control workshop</h1>
                 <div class="container">
                 <div class="details">
-                <p id="welcome-message">Welcome to the Fall prevention and control workshop at Restigouche Dojo!
+                <p id="welcome-message">Welcome to the Fall Prevention and Safe Landing Workshop at Restigouche Dojo!
                 </p>
                 <p id="program-description">Our program is designed to help elderly adults reduce their
                     risk of falling and improve their balance and mobility, while also teaching them how to fall properly to
