--- a/fallprevention.html
+++ b/fallprevention.html
@@ -56,7 +56,7 @@
                 <h1 id="title">Fall Prevention and Safe Landing Workshop</h1>
                 <div class="container">
                 <div class="details">
-                <p id="welcome-message">Welcome to the Fall Prevention and Safe Landing Workshop at Restigouche Dojo!
+                <p id="welcome-message">Welcome to the fall prevention and safe landing workshop at Restigouche Dojo!
                 </p>
                 <p id="program-description">Our program is designed to help elderly adults reduce their
                     risk of falling and improve their balance and mobility, while also teaching them how to fall properly to
