--- a/fallprevention.html
+++ b/fallprevention.html
@@ -53,7 +53,7 @@
                 <option value="en">English</option>
                 <option value="fr">Français</option>
                 </select>
-                <h1 id="title">Fall Prevention and Safe Landing Workshop</h1>
+                <h1 id="title">Fall prevention and safe landing workshop</h1>
                 <div class="container">
                 <div class="details">
                 <p id="welcome-message">Welcome to the fall prevention and safe landing workshop at Restigouche Dojo!
