--- a/buddiesnotbullies.html
+++ b/buddiesnotbullies.html
@@ -47,16 +47,16 @@
       <div class="testimonial">
         <i class="fas fa-quote-left"></i>
         <p class="testimonial-content">
-          "Attending this workshop was life-changing. I now feel more confident in handling challenging situations and standing up against bullying. The instructors were fantastic!"
+          ""
         </p>
         <span class="testimonial-author">- John Doe</span>
       </div>
       <div class="testimonial">
         <i class="fas fa-quote-left"></i>
         <p class="testimonial-content">
-          "I'm so grateful for the self-defense skills I learned. They not only helped me feel safer but also empowered me to set boundaries and handle conflicts more effectively."
+          ""
         </p>
-        <span class="testimonial-author">- Jane Smith</span>
+        <span class="testimonial-author">- John Doe</span>
       </div>
     </section>
 
