--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Upcoming events</h2>
                       <p class="people__desc">
-		      		<a href="https://restigouchedojo.com/payment.html" target="_blank">Judo Registration</a>
-		      		<br><a href="https://restigouchedojo.com/fallprevention.html" target="_blank">Fall prevention and safe 						landing</a>
-		      		<a href="https://restigouchedojo.com/empowerment_workshop.html" target="_blank">Empowerment Against 						Bullying Workshop</a>
+		      		<a href="https://restigouchedojo.com/payment.html">Judo Registration</a>
+		      		<br><a href="https://restigouchedojo.com/fallprevention.html">Fall prevention and safe 						landing</a>
+		      		<a href="https://restigouchedojo.com/empowerment_workshop.html"">Empowerment Against 						Bullying Workshop</a>
 		      		<br>Homeschool Judo/'Gym' class
 		      		<br>Women self-defense 2.0
 		      </p>
