--- a/empowerment_workshop.html
+++ b/empowerment_workshop.html
@@ -67,6 +67,6 @@
     </section>
   </div>
 
-  <script src="empowerment_script.js"></script>
+  <script src="empowermentscript.js"></script>
 </body>
 </html>
