--- a/empowermentworkshop.html
+++ b/empowermentworkshop.html
@@ -67,6 +67,6 @@
     </section>
   </div>
 
-  <script src="empowermentscript.js"></script>
+  <script src="/JS/empowermentscript.js"></script>
 </body>
 </html>
