--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       <p class="people__desc">
 		      		<a href="https://restigouchedojo.com/payment.html">Judo Registration</a>
 		      		<br><a href="https://restigouchedojo.com/fallprevention.html">Fall prevention and safe 						landing</a>
-		      		<a href="https://restigouchedojo.com/empowerment_workshop.html"">Empowerment Against 						Bullying Workshop</a>
+		      		<a href="https://restigouchedojo.com/empowermentworkshop.html"">Empowerment Against 						Bullying Workshop</a>
 		      		<br>Homeschool Judo/'Gym' class
 		      		<br>Women self-defense 2.0
 		      </p>
