--- a/fallprevention.html
+++ b/fallprevention.html
@@ -73,7 +73,7 @@
     </section>
   </div>
 
-  <script src="fallprevention.js"></script>
+  <script src="/JS/fallprevention.js"></script>
   <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
