--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Our Mission</h2>
-                    <p class="people__desc">Welcome to Restigouche Dojo! Our mission is to spread the fundamentals of Kodokan Judo to people of all skill levels. We now offer a variety of classes including kids' activities, self-defense, Judo, BJJ, and more. Join us to experience the transformative power of martial arts.</p>
+                    <p class="people__desc">Welcome to Restigouche Dojo! Our mission is to spread the fundamentals of martial arts to people of all skill levels. We now offer a variety of classes including kids' activities, self-defense, Judo, BJJ, and more. Join us to experience the transformative power of martial arts.</p>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Mission</h2>
