--- a/payment.html
+++ b/payment.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">2023 season</h2>
-                    <p class="people__desc"> <strong>FULL</strong>Fall block: $195.81
+                    <p class="people__desc"> Fall block(<strong>FULL</strong>): $195.81 
                         <a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>
                     
 			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
