--- a/payment.html
+++ b/payment.html
@@ -68,9 +68,9 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2023 season</h2>
                       <p class="people__desc"> Fall block(<strong>FULL</strong>): $195.81
-			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a><br>
-			 <span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
-			      <a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a>
+			      <!--<a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a>--><br>
+			 <span class="red"><strong>ON SALE</strong></span>: Annual(<strong>FULL</strong>): $355.3
+			      <!--<a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a>-->
 			      
 			    <a href="https://restigouchedojo.com/tinytotsinfo.html" target="_blank">Program info</a>
 			  </p>
