--- a/payment.html
+++ b/payment.html
@@ -111,7 +111,7 @@
                       
 			 <br><span class="red"><strong>ON SALE</strong></span>: Annual: $463.35
                         <a href="https://square.link/u/xhOEmpcS" target="_blank">Pay now</a>
-			      <a href="https://restigouchedojo.com/youthjudoinfo.html" target="_blank">Program info</a>
+			      <br><a href="https://restigouchedojo.com/youthjudoinfo.html" target="_blank">Program info</a>
                       </p>
                   </div>
                   <div class="people__div people__div--name">
