--- a/empowermentworkshop.html
+++ b/empowermentworkshop.html
@@ -42,6 +42,7 @@
       </div>
     </section>
 
+    <!---
     <section class="section">
       <h2 class="section-title" id="section-title-3">What Participants Say</h2>
       <div class="testimonial">
@@ -59,11 +60,11 @@
         <span class="testimonial-author">- John Doe</span>
       </div>
     </section>
-
+    -->
     <section class="section">
       <h2 class="section-title" id="section-title-4">Register Now!</h2>
       <p class="section-content" id="section-content-4">Don't miss this opportunity to empower yourself and acquire valuable self-defense techniques!</p>
-      <a href="#" class="cta-btn">Enroll/Inscription</a>
+      <a href="https://forms.gle/JH9jiCoT4JH4ccYPA" class="cta-btn">Enroll/Inscription</a>
     </section>
   </div>
 
