--- a/empowermentworkshop.html
+++ b/empowermentworkshop.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Empowerment Against Bullying Workshop - Techniques Edition</h1>
-    <a href="#" class="cta-btn">Enroll/Inscription</a>
+    <a href="https://forms.gle/JH9jiCoT4JH4ccYPA" class="cta-btn">Enroll/Inscription</a>
     <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
   <div class="container">
