--- a/empowermentworkshop.html
+++ b/empowermentworkshop.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Empowerment Against Bullying Workshop - Techniques Edition</h1>
-    <a href="https://forms.gle/JH9jiCoT4JH4ccYPA" class="cta-btn">Enroll/Inscription</a>
+    <a href="" class="cta-btn">Enroll/Inscription</a>
     <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
   <div class="container">
@@ -64,7 +64,7 @@
     <section class="section">
       <h2 class="section-title" id="section-title-4">Register Now!</h2>
       <p class="section-content" id="section-content-4">Don't miss this opportunity to empower yourself and acquire valuable self-defense techniques!</p>
-      <a href="https://forms.gle/JH9jiCoT4JH4ccYPA" class="cta-btn">Enroll/Inscription</a>
+      <a href="" class="cta-btn">Enroll/Inscription</a>
     </section>
   </div>
 
