--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
            
                 <br> <div class="box">
                 <span></span>
-                <h5><a href="payment.html">JUDO-FALL REGISTRATION OPEN!</a></h5>
+                <h5><a href="payment.html">JUDO-WINTER REGISTRATION OPEN SOON!</a></h5>
               </div>
             <!--BOX END-->
 		
@@ -102,10 +102,8 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Upcoming events</h2>
                       <p class="people__desc">
-		      		<a href="https://restigouchedojo.com/payment.html">Judo Registration</a>
+			      <a href="https://restigouchedojo.com/payment.html">WINTER Judo Registration</a>
 		      		<br><a href="https://restigouchedojo.com/fallprevention.html">Fall prevention and safe 						landing</a>
-		      		<a href="https://restigouchedojo.com/empowermentworkshop.html"">Empowerment Against 						Bullying Workshop</a>
-		      		<br>Homeschool Judo/'Gym' class
 		      		<br>Women self-defense 2.0
 		      </p>
                   </div>
