--- a/payment.html
+++ b/payment.html
@@ -67,9 +67,9 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2023 season</h2>
-                      <p class="people__desc"> Fall block(<strong>FULL</strong>): $195.81
+                      <p class="people__desc"> Fall block: $195.81
 			      <!--<a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a>--><br>
-			 <span class="red"><strong>ON SALE</strong></span>: Annual(<strong>FULL</strong>): $355.3
+			 <span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
 			      <!--<a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a>-->
 			      
 			    <br><a href="https://restigouchedojo.com/tinytotsinfo.html" target="_blank">Program info</a>
@@ -87,10 +87,10 @@
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">2023 season</h2>
-                    <p class="people__desc"> Fall block(<strong>FULL</strong>): $195.81 
+                    <p class="people__desc"> Fall block: $195.81 
                         <!--<a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>-->
                     
-			<br><span class="red"><strong>ON SALE</strong></span>: Annual(<strong>FULL</strong>): $355.3
+			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
 			      <!--<a href="https://square.link/u/ITi22NJX" target="_blank">Pay now</a>-->
 			<br><a href="https://restigouchedojo.com/kinderjudoinfo.html" target="_blank">Program info</a>
 			</p>
