--- a/payment.html
+++ b/payment.html
@@ -66,8 +66,8 @@
                       <img src="Photos/pexels-cottonbro-studio-7990073.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
-                      <h2 class="people__name">2023 season</h2>
-                      <p class="people__desc"> Fall block: $195.81
+                      <h2 class="people__name">2024 season</h2>
+                      <p class="people__desc"> Winter block: $195.81
 			      <!--<a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a>--><br>
 			 <span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
 			      <!--<a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a>-->
@@ -86,8 +86,8 @@
                     <img src="Photos/pexels-cottonbro-studio-7988827.jpg" alt="" class="people__img">
                 </div>
                 <div class="people__div people__div--info">
-                    <h2 class="people__name">2023 season</h2>
-                    <p class="people__desc"> Fall block: $195.81 
+                    <h2 class="people__name">2024 season</h2>
+                    <p class="people__desc"> Winter block: $195.81 
                         <!--<a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>-->
                     
 			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
@@ -105,8 +105,8 @@
                       <img src="Photos/pexels-rodnae-productions-7045729.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
-                      <h2 class="people__name">2023 season</h2>
-                      <p class="people__desc">Fall block: $257.55
+                      <h2 class="people__name">2024 season</h2>
+                      <p class="people__desc">Winter block: $257.55
                         <!--<a href="https://square.link/u/u6AABYXN" target="_blank">Pay now</a>-->
                       
 			 <br><span class="red"><strong>ON SALE</strong></span>: Annual: $463.35
