--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
            
                 <br> <div class="box">
                 <span></span>
-                <h5><a href="payment.html">JUDO-WINTER REGISTRATION OPEN SOON!</a></h5>
+                <h5><a href="payment.html">JUDO-WINTER REGISTRATION NOW OPEN!</a></h5>
               </div>
             <!--BOX END-->
 		
