--- a/instructors.html
+++ b/instructors.html
@@ -24,10 +24,10 @@
                  </div>
                  <ul class="menu-items">
                      <li><a href="index.html">Home</a></li>
-                     <li><a href="meettheteam.html">Instructors</a></li>
-                     <li><a href="membership.html">Schedule</a></li>
-                     <li><a href="payment.html">Registration</a></li>
-                     <li><a href="photosvideos.html">Media</a></li>
+                     <li><a href="instructors.html">Instructors</a></li>
+                     <li><a href="schedule.html">Schedule</a></li>
+			<li><a href="registration.html">Registration</a></li>
+                     <li><a href="media.html">Media</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
                                                                <div id="google_translate_element"></div><script type="text/javascript">
                       function googleTranslateElementInit() {
