--- a/registration.html
+++ b/registration.html
@@ -56,7 +56,7 @@
 
    <div class="pen-info">
               <h1 class="pen-info__title">Membership</h1>
-	   <h1 style="font-size: 1rem">(Please note that there is a 2.9%+0.30¢ processing fee included in our prices)</h1><br>***All members must register with Judo NB/Canada prior to beginning classes (except Tiny Tots)***<br>**Membership fees are non-refundable.**
+	   <h1 style="font-size: 1rem">(Please note that there is a 2.9%+0.30¢ processing fee included in our prices)</h1><br>***All judo members must register with Judo NB/Canada prior to beginning classes (except Tiny Tots)***<br>**Membership fees are non-refundable.**
           </div>
       
           <div class="demo">
