--- a/registration.html
+++ b/registration.html
@@ -159,8 +159,8 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Monthly(13+ Y.O.)</h2>
                       <p class="people__desc"> Monthly: $67.5
-			      <a href="https://square.link/u/fATYua9H" target="_blank">Pay now</a>
-			      <a>3 months: $180 - Contact us</a>a><br>
+			      <a href="https://square.link/u/fATYua9H" target="_blank">Pay now</a><br>
+			      <a>3 months: $180 - Contact us</a><br>
 			  <a href="https://restigouchedojo.com/bjjinfo.html" target="_blank">Program info</a>
 			  </p>
                   </div>
