--- a/registration.html
+++ b/registration.html
@@ -68,9 +68,9 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2024 season</h2>
                       <p class="people__desc"> Winter block: $195.81
-			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a><br>
+			      <a href="" target="_blank">Pay now-FULL</a><br>
 			 <span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
-			      <a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a>
+			      <a href="" target="_blank">Pay now-FULL</a>
 			      
 			    <br><a href="https://restigouchedojo.com/tinytotsinfo.html" target="_blank">Program info</a>
 			  </p>
