--- a/registration.html
+++ b/registration.html
@@ -69,7 +69,7 @@
                       <h2 class="people__name">2024 season</h2>
                       <p class="people__desc"> Winter block: $195.81
 			      <a><strong>FULL</strong></a>
-			 <span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
+			<br> <span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
 			      <a><strong>FULL</strong></a>
 			      
 			    <br><a href="https://restigouchedojo.com/tinytotsinfo.html" target="_blank">Program info</a>
