--- a/registration.html
+++ b/registration.html
@@ -88,10 +88,10 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">2024 season</h2>
                     <p class="people__desc"> Winter block: $195.81 
-                        <a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>
+                        <a><strong>FULL</strong></a>
                     
 			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
-			      <a href="https://square.link/u/ITi22NJX" target="_blank">Pay now</a>
+			      <a><strong>FULL</strong></a>
 			<br><a href="https://restigouchedojo.com/kinderjudoinfo.html" target="_blank">Program info</a>
 			</p>
                 </div>
