--- a/registration.html
+++ b/registration.html
@@ -160,7 +160,7 @@
                       <h2 class="people__name">Monthly(13+ Y.O.)</h2>
                       <p class="people__desc"> Monthly: $67.5
 			      <a href="https://square.link/u/fATYua9H" target="_blank">Pay now</a><br>
-			      <a>3 Months: $180 - Contact us</a><br>
+			      <a href="https://restigouchedojo.com/contactus.html" target="_blank">Contact us!</a><br>
 			  <a href="https://restigouchedojo.com/bjjinfo.html" target="_blank">Program info</a>
 			  </p>
                   </div>
