--- a/registration.html
+++ b/registration.html
@@ -143,7 +143,7 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Annual membership</h2>
                     <p class="people__desc"> $63.5
-                <a href="https://square.link/u/Vyo6ryns" target="_blank">Pay now</a>
+                <a href="https://square.link/u/Vyo6ryns" target="_blank">3 Months: $180- Contact us</a>
 			</p>
                 </div>
                 <div class="people__div people__div--name">
