--- a/registration.html
+++ b/registration.html
@@ -143,7 +143,7 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Annual membership</h2>
                     <p class="people__desc"> $63.5
-                <a href="https://square.link/u/Vyo6ryns" target="_blank">3 Months: $180- Contact us</a>
+                <a href="https://square.link/u/Vyo6ryns" target="_blank">Pay now</a>
 			</p>
                 </div>
                 <div class="people__div people__div--name">
@@ -160,7 +160,7 @@
                       <h2 class="people__name">Monthly(13+ Y.O.)</h2>
                       <p class="people__desc"> Monthly: $67.5
 			      <a href="https://square.link/u/fATYua9H" target="_blank">Pay now</a><br>
-			      <a href="https://restigouchedojo.com/contactus.html" target="_blank">Contact us!</a><br>
+			      <a href="https://restigouchedojo.com/contactus.html">3 monts- Contact us!</a><br>
 			  <a href="https://restigouchedojo.com/bjjinfo.html" target="_blank">Program info</a>
 			  </p>
                   </div>
