--- a/bjjinfo.html
+++ b/bjjinfo.html
@@ -76,6 +76,11 @@
           <h3>Challenge Yourself Mentally and Physically</h3>
           <p>BJJ is a mentally and physically challenging martial art that can help you develop discipline, focus, and perseverance.</p>
         </div>
+	      <div class="feature-item">
+          <img src="https://img.icons8.com/color/256/kimono.png" alt="Self-Defense Icon">
+          <h3>Invictus Leo Recognized</h3>
+          <p>Restigouche Dojo is recognized by Invictus Leo, a collective promoting Brazilian Jiu Jitsu training. Our dojo welcomes individuals from all backgrounds, including law enforcement professionals. Join our community for quality training in a supportive environment.</p>
+        </div>
       </div>
     </section>
 
