--- a/bjjinfo.html
+++ b/bjjinfo.html
@@ -79,7 +79,7 @@
 	      <div class="feature-item">
           <img src="Photos/invictus.png" alt="Invictus Canada logo">
           <h3>Invictus Leo Recognized</h3>
-          <p>Restigouche Dojo is recognized by Invictus Leo, a collective promoting Brazilian Jiu Jitsu training. Our dojo welcomes individuals from all backgrounds, including law enforcement professionals. Join our community for quality training in a supportive environment.</p>
+          <p>Restigouche Dojo is recognized by Invictus Leo, a collective promoting Brazilian Jiu Jitsu training. Our dojo welcomes individuals from all backgrounds, including law enforcement professionals. Join our community for quality training in a supportive environment. <a target="_blank" href="https://invictusleo.com/">Invictus LEO</a></p>
         </div>
       </div>
     </section>
