--- a/bjjinfo.html
+++ b/bjjinfo.html
@@ -55,7 +55,7 @@
         <p>BJJ is a martial art and combat sport that originated in Brazil in the early 20th century. It is based on the principles of leverage and technique, rather than brute strength, making it a practical self-defense system for people of all ages and sizes.</p>
         <p>At Restigouche Dojo, our BJJ classes are taught by Maxime Raymond, a highly skilled instructor who holds a Judo black belt and a BJJ purple belt. The curriculum that is being followed is from Rodrigo Resende BJJ Team, a 5th degree Judo and BJJ black belt under the tutelage of Master Max Trombini (MXT) from Brazil.</p>
         <p>The curriculum is designed to teach students a solid foundation in the fundamental techniques of BJJ, while also incorporating more advanced techniques and strategies as students progress. Our classes are suitable for students of all levels, from beginners to advanced practitioners.</p>
-        <a href="https://restigouchedojo.com/payment.html" class="cta-button">Join Us Today</a>
+        <a href="https://restigouchedojo.com/registration.html" class="cta-button">Join Us Today</a>
       </div>
     </section>
     <section class="features">
