--- a/index.html
+++ b/index.html
@@ -124,11 +124,21 @@
           <div id="offerings-content">
             <div class="offering">
               <h3>Judo</h3>
-              <p>Discover the art of Judo, a modern Japanese martial art.</p>
+              <p>Discover the art of Judo, a modern Japanese martial art.<br> Program info:
+	      <ul>
+		      <a href="tinytotsinfo.html">Tiny Tots</a>
+		      <a href="kinderinfo.html">Kinder Judo</a>
+		      <a href="youthjudo.html">Youth Judo</a>
+	      </ul>
+	      </p>
             </div>
             <div class="offering">
               <h3>BJJ - Brazilian Jiu-Jitsu</h3>
-              <p>Learn the art of Brazilian Jiu-Jitsu and its ground fighting techniques.</p>
+              <p>Learn the art of Brazilian Jiu-Jitsu and its ground fighting techniques. <br> Program info:
+	      <ul>
+		      <a href="bjjinfo.html">BJJ info</a>
+	      </ul>
+	      </p>
             </div>
             <div class="offering">
               <h3>Self-Defense Classes</h3>
