--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
               <h3>Judo</h3>
               <p>Discover the art of Judo, a modern Japanese martial art.<br> Program info:
 	      <ul>
-		      <a href="tinytotsinfo.html">Tiny Tots</a>
-		      <a href="kinderinfo.html">Kinder Judo</a>
-		      <a href="youthjudo.html">Youth Judo</a>
+		      <li><a href="tinytotsinfo.html">Tiny Tots</a></li>
+		      <li><a href="kinderinfo.html">Kinder Judo</a></li>
+		      <li><a href="youthjudo.html">Youth Judo</a></li>
 	      </ul>
 	      </p>
             </div>
@@ -136,7 +136,7 @@
               <h3>BJJ - Brazilian Jiu-Jitsu</h3>
               <p>Learn the art of Brazilian Jiu-Jitsu and its ground fighting techniques. <br> Program info:
 	      <ul>
-		      <a href="bjjinfo.html">BJJ info</a>
+		      <li><a href="bjjinfo.html">BJJ info</a></li>
 	      </ul>
 	      </p>
             </div>
