--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
               <p>Discover the art of Judo, a modern Japanese martial art.<br> Program info:
 	      <ul>
 		      <li><a href="tinytotsinfo.html">Tiny Tots</a></li>
-		      <li><a href="kinderinfo.html">Kinder Judo</a></li>
-		      <li><a href="youthjudo.html">Youth Judo</a></li>
+		      <li><a href="kinderjudoinfo.html">Kinder Judo</a></li>
+		      <li><a href="youthjudoinfo.html">Youth Judo</a></li>
 	      </ul>
 	      </p>
             </div>
