--- a/fallprevention.html
+++ b/fallprevention.html
@@ -63,8 +63,8 @@
     -->
     
     <section class="section">
-      <h2 class="section-title-4" id="section-title-4">Enroll Now!</h2>
-      <p class="section-content-4" id="section-content-4">Take the first step towards a safer and more active lifestyle!</p>
+      <h2 class="section-title" id="section-title-4">Enroll Now!</h2>
+      <p class="section-content" id="section-content-4">Take the first step towards a safer and more active lifestyle!</p>
       <a href="https://restigouchedojo.com/fallprevention.html" class="cta-btn">Enroll/Inscription</a>
     </section>
 
