--- a/fallprevention.html
+++ b/fallprevention.html
@@ -69,7 +69,7 @@
     </section>
 
     <section class="section">
-      <h2 class="section-title" id="dislclaimer-title">Disclaimer</h2>
+      <h2 class="section-title" id="disclaimer-title">Disclaimer</h2>
       <div class="section-content" id="disclaimer-content">
         <p>Please note that our program is not a guarantee of safety. While we teach proper techniques to reduce the risk of injury, accidents can still occur. Participants should stay vigilant and avoid dangerous situations, and consult with their healthcare provider before starting any new exercise program.</p>
       </div>
