--- a/fallprevention.html
+++ b/fallprevention.html
@@ -25,7 +25,7 @@
     <section class="section">
       <h2 class="section-title" id="section-title-1">Welcome to the Fall Prevention Workshop</h2>
       <p class="section-content" id="section-content-1">
-        Our program is designed to help senior citizens adults reduce their risk of falling and improve their balance and mobility, while also teaching them how to fall properly to reduce the risk of injury. Join us for 1-hour sessions led by experienced instructors once a week.
+        Our program is designed to help senior citizens reduce their risk of falling and improve their balance and mobility, while also teaching them how to fall properly to reduce the risk of injury. Join us for 1-hour sessions led by experienced instructors once a week.
       </p>
     </section>
 
