--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -43,7 +43,7 @@
     </section>
   </div>
 
-  <script src="/JS/womensselfdefense.js"></script>
+  <script src="/JS/script.js"></script>
   <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
