--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -7,7 +7,7 @@
 
 <section class="section">
   <h2 class="section-title" id="section-title-2">Enroll Now!</h2>
-  <div class="section-content" id="program-description">
+  <div class="section-content" id="enroll-message">
     Take the first step towards feeling confident and secure!
   </div>
   <a href="https://restigouchedojo.com/womensselfdefense.html" class="cta-btn">Enroll/Inscription</a>
