--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1 id="title">Women's Self-Defense Workshop</h1>
-    <a href="#" class="cta-btn">Enroll/Inscription</a>
+    <a href="#" class="cta-btn" id="enroll-link">Enroll/Inscription</a>
     <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
   <div class="container">
@@ -23,16 +23,15 @@
     </section>
 
     <section class="section">
-      <h2 class="section-title" id="section-title-1">Welcome to the Women's Self-Defense Workshop</h2>
+      <h2 class="section-title" id="section-title-1"></h2>
       <p class="section-content" id="section-content-1">
-        Our workshop focuses on creating a safe space for women by equipping them with the tools they need to defend themselves in a way that prioritizes their safety and well-being. Whether you're a seasoned athlete or a beginner, our experienced instructors will work with you to develop the skills you need to feel empowered and confident. We understand the importance of feeling secure in your daily life, which is why we are committed to providing a supportive and inclusive environment for all participants. Our program is not about promoting aggression or violence, but rather about instilling a sense of confidence and control.
       </p>
     </section>
 
     <section class="section">
-      <h2 class="section-title" id="section-title-2">Enroll Now!</h2>
-      <p class="section-content" id="section-content-2">Take the first step towards feeling confident and secure!</p>
-      <a href="https://restigouchedojo.com/womensselfdefense.html" class="cta-btn">Enroll/Inscription</a>
+      <h2 class="section-title" id="section-title-2"></h2>
+      <p class="section-content" id="section-content-2"></p>
+      <a href="https://restigouchedojo.com/womensselfdefense.html" class="cta-btn" id="enroll-button"></a>
     </section>
 
     <section class="section">
