--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       <p class="people__desc">
 			      <a href="https://restigouchedojo.com/registration.html">WINTER Judo Registration</a>
 		      		<br><a href="https://restigouchedojo.com/fallprevention.html">Fall prevention and safe 						landing</a>
-		      		<br>Women self-defense 2.0
+		      		<br> <a href="https://restigouchedojo.com/womenselfdefense.html">Women self-defense 2.0</a>
 		      </p>
                   </div>
                   <div class="people__div people__div--name">
