--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
             </div>
             <div class="offering">
               <h3>Self-Defense Classes</h3>
-              <p>Master essential self-defense skills and techniques to protect yourself.</p>
+              <p>Master essential self-defense skills and techniques to protect yourself.
+	      	      <ul>
+		      <li><a href="womenselfdefense.html">Women self-defense /a></li>
+	      </ul>
+	      </p>
             </div>
             <div class="offering">
               <h3>Kids Playgroups</h3>
