--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <h3>Self-Defense Classes</h3>
               <p>Master essential self-defense skills and techniques to protect yourself.
 	      	      <ul>
-		      <li><a href="womenselfdefense.html">Women self-defense /a></li>
+		      <li><a href="womenselfdefense.html">Women self-defense </a></li>
 	      </ul>
 	      </p>
             </div>
