--- a/womenselfdefense.html
+++ b/womenselfdefense.html
@@ -23,7 +23,7 @@
     </section>
 
     <section class="section">
-      <h2 class="section-title" id="section-title-1">Welcome to the Women's Self-Defense Workshop</h2>
+      <h2 class="section-title" id="section-title-1">Welcome to the Women's Self-Defense Workshop <br>*dates to be determined*</h2>
       <p class="section-content" id="section-content-1">
         Our workshop focuses on creating a safe space for women by equipping them with the tools they need to defend themselves in a way that prioritizes their safety and well-being. Whether you're a seasoned athlete or a beginner, our experienced instructors will work with you to develop the skills you need to feel empowered and confident. We understand the importance of feeling secure in your daily life, which is why we are committed to providing a supportive and inclusive environment for all participants. Our program is not about promoting aggression or violence, but rather about instilling a sense of confidence and control.
       </p>
