--- a/index.html
+++ b/index.html
@@ -149,9 +149,14 @@
 	      </p>
             </div>
             <div class="offering">
-              <h3>Kids Playgroups</h3>
-              <p>Engage your kids in fun playgroups focused on teamwork and social development.</p>
+              <h3>Playful</h3>
+              <p>Engage your kids in fun playgroups focused on teamwork and social development.
+	      <ul>
+		      <li><a href="playful.html">Playful </a></li>
+	      </ul>
+	      </p>
             </div>
+		  
             <div class="offering">
               <h3>Fitness Classes (upcoming)</h3>
               <p>Stay fit and healthy with our diverse range of fitness classes for all levels.</p>
