--- a/fallprevention.html
+++ b/fallprevention.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Fall prevention and safe landing workshop</h1>
-    <a href="#" class="cta-btn">Enroll/Inscription</a>
+    <a href="https://square.link/u/F1cG2PhG" class="cta-btn">Enroll/Inscription</a>
     <a href="index.html" class="back-btn">Back to Main Website</a> 
   </header>
   <div class="container">
