--- a/fallprevention.html
+++ b/fallprevention.html
@@ -65,7 +65,7 @@
     <section class="section">
       <h2 class="section-title" id="section-title-4">Enroll Now!</h2>
       <p class="section-content" id="section-content-4">Take the first step towards a safer and more active lifestyle!</p>
-      <a href="https://restigouchedojo.com/fallprevention.html" class="cta-btn">Enroll/Inscription</a>
+      <a href="https://square.link/u/F1cG2PhG" class="cta-btn">Enroll/Inscription</a>
     </section>
 
     <section class="section">
