--- a/index.html
+++ b/index.html
@@ -156,6 +156,15 @@
 	      </ul>
 	      </p>
             </div>
+
+	       <div class="offering">
+              <h3>Fall prevention and safe lending for seniors</h3>
+              <p>Learn about fall prevention techniques and safe lending practices for seniors.
+	      <ul>
+		      <li><a href="fallprevention.html">Fall prevention and safe lending </a></li>
+	      </ul>
+	      </p>
+            </div>
 		  
             <div class="offering">
               <h3>Fitness Classes (upcoming)</h3>
