--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
            
                 <br> <div class="box">
                 <span></span>
-                <h5><a href="registration.html">JUDO-Fall REGISTRATION OPENING SOON!</a></h5>
+                <h5><a href="registration.html">JUDO-FALL REGISTRATION OPENING SOON!</a></h5>
               </div>
             <!--BOX END-->
 		
