--- a/tinytotsinfo.html
+++ b/tinytotsinfo.html
@@ -53,7 +53,10 @@
              <section class="hero">
       <div class="container">
         <h2>Tiny Tots Judo Classes</h2>
-        <p>Our Tiny Tots group is a "parent and me" class where one parent or caregiver will join their little one on the mats. During the 45-minute class, you can expect a warm-up, games, obstacle courses, partner activities with your child, introduction to Judo techniques, and breakfalls. This is a great opportunity for you to bond with your child while also introducing them to a healthy and active environment.</p>
+        <p>Our Tiny Tots group offers a unique "parent and me" class where one parent or caregiver joins their little one on the mats. In these engaging 45-minute sessions, you and your child will enjoy a variety of activities designed to introduce them to the world of grappling arts, including Brazilian Jiu-Jitsu (BJJ), Judo, and Wrestling.</p>
+	<p>Expect a fun-filled session featuring warm-up exercises, interactive games, obstacle courses, and partner activities tailored for both you and your child. Our experienced instructors will guide you through the basics of grappling techniques, incorporating elements from BJJ, Judo, and Wrestling to provide a well-rounded experience.</p>
+	<p>Furthermore, your child will learn essential skills such as breakfalls, fostering confidence and safety on the mats. This class not only offers a fantastic opportunity for bonding between parent and child but also creates a nurturing environment for introducing your little one to a healthy and active lifestyle.</p>
+	<p>Join us for Tiny Tots Judo Classes at Restigouche Dojo, and embark on an exciting journey of growth, connection, and exploration in the world of martial arts!</p>
         <a href="https://restigouchedojo.com/registration.html" class="cta-button">Join Us Today</a>
       </div>
     </section>
