--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div id="offerings-content">
             <div class="offering">
               <h3>Judo</h3>
-              <p>Discover the art of Judo, a modern Japanese martial art.<br> Program info:
+              <p>Discover the art of Judo, a modern Japanese martial art.<br> Programs info:
 	      <ul>
 		      <li><a href="tinytotsinfo.html">Tiny Tots</a></li>
 		      <li><a href="kinderjudoinfo.html">Kinder Judo</a></li>
