--- a/registration.html
+++ b/registration.html
@@ -67,7 +67,7 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2024 season</h2>
-                      <p class="people__desc"> Winter block: $195.81
+                      <p class="people__desc"> Fall block: $195.81
 			      <a href="https://square.link/u/pPcR8425" target="_blank">Pay now</a>
 			<br> <span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
 			      <a href="https://square.link/u/ofqdbRGM" target="_blank">Pay now</a>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">2024 season</h2>
-                    <p class="people__desc"> Winter block: $195.81 
+                    <p class="people__desc"> Fall block: $195.81 
                         <a href="https://square.link/u/2qa9unSf" target="_blank">Pay now</a>
                     
 			<br><span class="red"><strong>ON SALE</strong></span>: Annual: $355.3
@@ -106,11 +106,11 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2024 season</h2>
-                      <p class="people__desc">Winter block: $257.55
-                        <a href="https://square.link/u/u6AABYXN" target="_blank">Pay now</a>
+                      <p class="people__desc">Fall block: $257.55
+                        <a href="" target="_blank">Contact us</a>
                       
 			 <br><span class="red"><strong>ON SALE</strong></span>: Annual: $463.35
-                        <a href="https://square.link/u/xhOEmpcS" target="_blank">Pay now</a>
+                        <a href="" target="_blank">Contact us</a>
 			      <br><a href="https://restigouchedojo.com/youthjudoinfo.html" target="">Program info</a>
                       </p>
                   </div>
