--- a/media.html
+++ b/media.html
@@ -69,7 +69,18 @@
                 <div class="gallery-item">
                     <img class="gallery-image" src="Photos/dojo.jpg" alt="Dojo">
                 </div>
-        <!--COMING SOON 
+		
+		
+		<div class="gallery-item">
+                    <img class="gallery-image" src="Photos/group1.jpg" alt="Group picture">
+                </div>
+
+
+		<div class="gallery-item">
+                    <img class="gallery-image" src="Photos/group2.jpg" alt="Group picture">
+                </div>
+
+        <!-- 
                 <div class="gallery-item">
                     <img class="gallery-image" src="https://images.unsplash.com/photo-1486334803289-1623f249dd1e?w=500&h=500&fit=crop" alt="man wearing a black jacket, white shirt, blue jeans, and brown boots, playing a white electric guitar while sitting on an amp">
                 </div>
