--- a/registration.html
+++ b/registration.html
@@ -107,10 +107,10 @@
                   <div class="people__div people__div--info">
                       <h2 class="people__name">2024 season</h2>
                       <p class="people__desc">Fall block: $257.55
-                        <a href="contactus.html" target="_blank">Contact us</a>
+                        <a href="https://square.link/u/u6AABYXN" target="_blank">Pay now</a>
                       
 			 <br><span class="red"><strong>ON SALE</strong></span>: Annual: $463.35
-                        <a href="contactus.html" target="_blank">Contact us</a>
+                        <a href="https://square.link/u/xhOEmpcS" target="_blank">Pay now</a>
 			      <br><a href="https://restigouchedojo.com/youthjudoinfo.html" target="">Program info</a>
                       </p>
                   </div>
