--- a/youthjudoinfo.html
+++ b/youthjudoinfo.html
@@ -53,10 +53,13 @@
             <section class="hero">
                 <div class="container">
                   <h2>Youth Judo Classes</h2>
-                  <p>Youth Judo at Restigouche Dojo is not just about Judo—it's a dynamic martial arts program designed for children aged 7 and above, integrating elements from Brazilian Jiu-Jitsu (BJJ) and Wrestling to provide young learners with a comprehensive foundation in grappling arts. Our classes focus on teaching fundamental techniques and concepts of Judo while incorporating beneficial aspects from BJJ and Wrestling.</p>
+                  <p>Youth Judo at Restigouche Dojo is a dynamic Judo program designed for children aged 7 and above. Our program integrates elements from Brazilian Jiu-Jitsu (BJJ) and Wrestling to provide young learners with a comprehensive foundation in grappling arts. Our classes focus on teaching fundamental techniques and concepts of Judo while incorporating beneficial aspects from BJJ and Wrestling.</p>
+			
                   <p>Led by experienced instructors specialized in working with youth, our Youth Judo classes offer a holistic approach to martial arts education. Children aged 7 and above will learn standing and ground techniques (ne waza and tachi waza), grappling drills (randori), breakfalls, and the core values of Judo in a safe and supportive environment.</p>
-                  <p>We firmly believe that Youth Judo is a valuable tool for helping children develop physically, mentally, and socially. All of our instructors compliant with Judo Canada standards, and adhere to a strict code of conduct.</p>
-	<p>Enroll your child in Youth Judo Classes at Restigouche Dojo today, and provide them with a well-rounded martial arts education that cultivates confidence, resilience, and a lifelong passion for grappling arts.</p>
+                  <p>We firmly believe that Youth Judo is a valuable tool for helping children develop physically, mentally, and socially. All of our instructors comply with Judo Canada standards and adhere to a strict code of conduct.</p>
+			
+	<p>Enroll your child in Youth Judo at Restigouche Dojo today, and provide them with a well-rounded martial arts education that cultivates confidence, resilience, and a lifelong passion for grappling arts.</p>
+			
                   <a href="https://restigouchedojo.com/registration.html" class="cta-button">Join Us Today</a>
                 </div>
               <section class="features">
